tests/ast_bad_old_varray_type.stderr
tests/ast_bad_old_varray_type.hop:3:12: error: HOP1007: expected type
    3 |     var x [.n]u8
      |            ^
tests/ast_bad_old_varray_type.hop:3:12: note: expected type_kind type
